@@ -37,13 +37,7 @@ Released   : 20081126
         <!-- start sidebar1 -->
         <div id="sidebar1" class="sidebar">
           <ul>
-            <?php foreach (ZMTemplateManager::instance()->getLeftColBoxNames() as $box) { ?>
-              <?php if ($this->exists('boxes/'.$box)) { ?>
-                <li>
-                <?php echo $this->fetch('boxes/'.$box) ?>
-                </li>
-              <?php } ?>
-            <?php } ?>
+	          <?php echo $this->fetchBlockGroup('leftColumn', array('format' => '<li>%s</li>')) ?>
           </ul>
         </div>
         <!-- end sidebar1 -->
@@ -71,13 +65,7 @@ Released   : 20081126
         <!-- start sidebar2 -->
         <div id="sidebar2" class="sidebar">
           <ul>
-            <?php foreach (ZMTemplateManager::instance()->getRightColBoxNames() as $box) { ?>
-              <?php if ($this->exists('boxes/'.$box)) { ?>
-                <li>
-                <?php echo $this->fetch('boxes/'.$box) ?>
-                </li>
-              <?php } ?>
-            <?php } ?>
+	          <?php echo $this->fetchBlockGroup('rightColumn', array('format' => '<li>%s</li>')) ?>
           </ul>
         </div>
         <!-- end sidebar2 -->
